docs/kyverno-policies/tests/image-supply-chain/restrict-image-registries/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
spec:
  containers:
    - name: app
      image: docker.io/library/nginx:1.25.0
