docs/kyverno-policies/tests/image-supply-chain/restrict-image-registries/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
    - name: app
      image: platformacr.azurecr.io/sample:1.0.0
